--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -24,6 +24,10 @@
                                     <input is="emby-input" type="number" id="txtLdapPort" required min="0" label="LDAP Port:" />
                                     <div class="fieldDescription">The port to communicate with LDAP.</div>
                                 </div>
+                                <div class="inputContainer">
+                                    <input is="emby-input" type="number" id="txtLdapConnectionTimeout" required min="1" label="LDAP Connection Timeout (seconds):" />
+                                    <div class="fieldDescription">The timeout in seconds for connecting to the LDAP server.</div>
+                                </div>
                                 <div class="checkboxContainer checkboxContainer-withDescription">
                                     <label>
                                         <input type="checkbox" is="emby-checkbox" id="chkUseSsl" />
@@ -240,6 +244,7 @@
 
                 txtLdapServer: document.querySelector("#txtLdapServer"),
                 txtLdapPort: document.querySelector("#txtLdapPort"),
+                txtLdapConnectionTimeout: document.querySelector("#txtLdapConnectionTimeout"),
                 chkUseSsl: document.querySelector("#chkUseSsl"),
                 chkUseStartTls: document.querySelector("#chkUseStartTls"),
                 chkSkipSslVerify: document.querySelector("#chkSkipSslVerify"),
@@ -281,6 +286,7 @@
                 window.ApiClient.getPluginConfiguration(LdapConfigurationPage.pluginUniqueId).then(function (config) {
                     LdapConfigurationPage.txtLdapServer.value = config.LdapServer;
                     LdapConfigurationPage.txtLdapPort.value = config.LdapPort;
+                    LdapConfigurationPage.txtLdapConnectionTimeout.value = config.LdapConnectionTimeout;
                     LdapConfigurationPage.chkUseSsl.checked = config.UseSsl;
                     LdapConfigurationPage.chkUseStartTls.checked = config.UseStartTls;
                     LdapConfigurationPage.chkSkipSslVerify.checked = config.SkipSslVerify;
@@ -373,6 +379,7 @@
                 window.ApiClient.getPluginConfiguration(LdapConfigurationPage.pluginUniqueId).then(function (config) {
                     config.LdapServer = LdapConfigurationPage.txtLdapServer.value;
                     config.LdapPort = parseInt(LdapConfigurationPage.txtLdapPort.value);
+                    config.LdapConnectionTimeout = parseInt(LdapConfigurationPage.txtLdapConnectionTimeout.value);
                     config.UseSsl = LdapConfigurationPage.chkUseSsl.checked;
                     config.UseStartTls = LdapConfigurationPage.chkUseStartTls.checked;
                     config.AllowPassChange = LdapConfigurationPage.chkAllowPassChange.checked;
@@ -421,6 +428,7 @@
                 const configUpdate = {
                     LdapServer: LdapConfigurationPage.txtLdapServer.value,
                     LdapPort: parseInt(LdapConfigurationPage.txtLdapPort.value),
+                    LdapConnectionTimeout: parseInt(LdapConfigurationPage.txtLdapConnectionTimeout.value),
                     UseSsl: LdapConfigurationPage.chkUseSsl.checked,
                     AllowPassChange: LdapConfigurationPage.chkAllowPassChange.checked,
                     UseStartTls: LdapConfigurationPage.chkUseStartTls.checked,
